Made sure "Learn More" button on "Ask Google for suggestions" dialog is able to be focused.

Ensure focusability is enabled along with the correct tool-tip.

Bug: 806706
Change-Id: Ic60278a2d57f1c23cf36c8633994eb39fc7a5417
Reviewed-on: https://chromium-review.googlesource.com/890388
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532535}
Former-commit-id: 190a3e4a3b3958abc2df7d22138dac4b2406a867